# calculator

./: CMakeLists.txt  Main.qml  SecretMenu.qml  TextStyles.qml  Theme.qml  main.cpp
components/: BackButton.qml  BackCalculation.qml  BatteryIcon.qml  ButtonAction.qml  ButtonSimple.qml  CalcButton.qml  CellularIcon.qml  CircularSector.qml  StatusBar.qml  StyledText.qml  TextCalculationLine.qml  TextResult.qml  WifiIcon.qml
components/icons/: BracketsIcon.qml  DivideIcon.qml  EqualsIcon.qml  MinusIcon.qml  MultiplyIcon.qml  PercentIcon.qml  PlusIcon.qml  PlusMinusIcon.qml
qml/: Theme.qml
src/: CalculatorModel.cpp  CalculatorModel.h
